<?xml version="1.0"?>
<package format="3">
  <name>tortoisebot_description</name>
  <version>0.0.1</version>
  <description>URDF description of TortoiseBot for ROS 2 Jazzy</description>
  <maintainer email="mikalinmonday2020@gmail.com">summeratsummer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
</package>
